# cli-tools

./: .gitignore  CLAUDE.md  gog-html
.cadi/: cadi-project.sqlite  current_tool  last_activity  loop.sh  plan_loop.sh
.cadi/documentation/: TEMPLATE.md  api-company-commands.md  api-contact-commands.md  api-deal-commands.md  api-describe-image-auth.md  api-describe-image-core.md  api-describe-image-describe.md  api-followup-commands.md  api-log-commands.md  api-search-status-commands.md  data-crm-foundation.md  flow-interaction-logging.md  image-creator.md  infra-cli-tools-standards.md  infra-crm-test-suite.md  infra-describe-image-output-saving.md  infra-describe-image-structure.md  infra-describe-image-testing.md
.cadi/hooks/: activity_logger.sh  block_questions.sh  notification_logger.sh  pre_tool_logger.sh  stop_logger.sh
.cadi/prompts/: BASE_PROMPT.md  BUG_PROMPT.md  FEATURE_PROMPT.md  PLAN_PROMPT.md  PROTOTYPE_PROMPT.md
.cadi/proof/: 10_log_commands.txt  11_deal_commands.txt  12_followup_commands.txt  13_search_status.txt  13_search_status_commands.txt  14_test_all_modules.txt  14_test_suite.txt  14_tests_all_pass.txt  14_tests_all_passing.txt  3_auth_subcommand.txt  7_foundation_modules.txt  8_company_commands.txt  9_contact_commands.txt  task1_package_structure.txt  task_2_core_cli_structure.txt  task_4_describe_command.txt
.cadi/schema/: schema.sql
.cadi/schema/migrations/: 0002_add_task_priority.sql  0003_add_failure_handling.sql  0004_add_run_summary.sql
.claude/: settings.json
.claude/skills/cadi-discover/: SKILL.md
.claude/skills/cadi-doc/: SKILL.md
.claude/skills/cadi-plan/: SKILL.md
.claude/skills/project-context/: SKILL.md
crm/: SPEC.md  pyproject.toml
crm/.cadi/documentation/: api-company-commands.md  api-contact-commands.md  api-deal-commands.md  api-followup-commands.md  data-contact-commands.md  data-crm-foundation.md
crm/src/crm/: __main__.py  db.py  main.py  models.py
crm/src/crm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
crm/src/crm/commands/: company.py  contact.py  deal.py  followup.py  log.py  search.py  status.py
crm/tests/: conftest.py  test_company.py  test_contact.py  test_db.py  test_deal.py  test_followup.py  test_log.py  test_search.py  test_status.py
describe-image/: pyproject.toml
describe-image/.cadi/documentation/: api-describe-image-describe.md
describe-image/.cadi/proof/: 3_auth_subcommand.txt  5_output_saving_help.txt  6_end_to_end_test.txt
describe-image/src/describe_image/: main.py
describe-image/src/describe_image.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
describe-image/tests/: test_output_saving.py
doc-search/: pyproject.toml
doc-search/src/doc_search/: __main__.py  config.py  db.py  extractor.py  llm.py  main.py  models.py
image-creator/: pyproject.toml
image-creator/src/image_creator/: main.py
image-creator/src/image_creator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
memory-search/: pyproject.toml
memory-search-re/: pyproject.toml
memory-search-re/src/memory_search.egg-info/: PKG-INFO  SOURCES.txt
memory-search-re/src/memory_search_re/: config.py  indexer.py  main.py
memory-search-re/src/memory_search_re.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
memory-search/src/memory_search/: config.py  main.py
memory-search/src/memory_search.egg-info/: entry_points.txt  top_level.txt
ports/: pyproject.toml
ports/src/ports.egg-info/: PKG-INFO  (+2 more)
property-lookup/: pyproject.toml
property-lookup/src/property_lookup/: config.py  districts.py  geocode.py  main.py  zillow.py
property-lookup/src/property_lookup/commands/: districts_cmd.py  lookup_cmd.py  zillow_cmd.py
shared/: pyproject.toml
shared/.cadi/documentation/: infra-cli-shared-library.md
shared/src/cli_shared/: __init__.py  errors.py  output.py
tc/: pyproject.toml
tc/src/tc/: business_days.py  config.py  db.py  main.py  models.py  output.py  templates.py
tc/src/tc/commands/: document.py  note.py  person.py  report.py  task.py  transaction.py
tc/tests/: conftest.py  test_business_days.py  test_document.py  test_task.py  test_transaction.py
(+18 files in other folders)
