[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "image-creator"
version = "0.1.0"
description = "CLI tool for image generation via OpenRouter"
requires-python = ">=3.10"
dependencies = ["typer", "requests", "keyring"]

[project.scripts]
image-creator = "image_creator.main:app"

[tool.setuptools.packages.find]
where = ["src"]
