[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-search-re"
version = "0.1.0"
description = "Semantic memory search for Real Estate assistant — indexes markdown, embeds with OpenRouter, hybrid vector+BM25 search"
requires-python = ">=3.10"
dependencies = ["typer", "requests", "sqlite-vec"]

[project.scripts]
memory-search-re = "memory_search_re.main:app"

[tool.setuptools.packages.find]
where = ["src"]
