[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-search"
version = "0.1.0"
description = "Semantic memory search for Sprocket assistant — indexes markdown, embeds with OpenRouter, hybrid vector+BM25 search"
requires-python = ">=3.10"
dependencies = ["typer", "requests", "sqlite-vec"]

[project.scripts]
memory-search = "memory_search.main:app"

[tool.setuptools.packages.find]
where = ["src"]
